# HumMobCov

./: .gitignore  Entropic_measures.ipynb  README.md  boston_mobs.ipynb  geohash_grid.py  logs_CA.out  pyproject.toml
.github/paper/: discussion.tex  introduction.tex  main.tex  methods.tex  results.tex  supplementary_informations.tex
.github/skills/new_project_structure/: SKILL.md
.github/skills/old_output_structure/: SKILL.md
.github/skills/old_structurefile_system/: SKILL.md
.github/skills/paper_pipeline_sync/: SKILL.md
.github/skills/parallelization/: SKILL.md
.github/skills/pipeline-store-s3/: SKILL.md
.github/skills/structure_old_process/: SKILL.md
.github/skills/transition-distribution/: SKILL.md
.github/skills/update-skills/: SKILL.md
.github/workflows/: sync-overleaf.yml
src/: User.py  __init__.py  constants.py  datasets.py  gap_analysis_plots.py  main.ipynb  main.py  main_transitions.ipynb  main_visualization_single_user.ipynb  pipeline.py  plotter.py  rg_fits.py  rg_histograms.py  rg_mobility_maps.py  s3_io.py  set_mpl.py  store.py  tile_counties_via_geohash.py  utils.py  vectorized_pipeline.py
src/__pycache__/: utils._filter_inner-66.py310.1.nbc  utils._filter_inner-66.py310.nbi  utils._xy_inner-89.py310.1.nbc  utils._xy_inner-89.py310.nbi
src/dataset/: __init__.py  dataset_specs.py
src/geometry/: __init__.py
src/old/: ORGANIZED_PROCESSING.md
src/transition_matrices/: __init__.py  distribution_transitions_and_presences.py  readme_transition_distribution_evolution.md  transition_pipeline.py
src/visualization/: animation_grid_transitions.py  animation_transition_statistics.py  visualization_distribution_transition_counts.py  visualization_grid_transitions.py  visualization_transition_statistics.py
tests/: bench_workers.py  benchmark_time_functions.ipynb  time_functions.txt
