# ===========================================================================
# HumMobCov - uv project manifest
#
# Quick start
# -----------
# Install uv (once):
#   curl -LsSf https://astral.sh/uv/install.sh | sh
#
# Create + activate the virtual environment:
#   cd HumMobCov
#   uv sync               # installs all core dependencies
#   uv sync --group dev   # also installs notebook tools
#   source .venv/bin/activate
#
# Add a new dependency:
#   uv add <package>
# ===========================================================================

[project]
name = "hummobcov"
version = "0.1.0"
description = "Human mobility analysis during COVID-19 (California & Massachusetts)"
requires-python = "==3.10.*"

dependencies = [
    # Numeric / scientific
    "numpy>=1.26",
    "scipy>=1.11",

    # Dataframes
    "pandas>=1.5",
    "polars>=0.20",         # fast columnar ops used in t_stop()
    "pyarrow>=14.0",        # parquet I/O backend

    # Geospatial
    "geopandas>=0.14",
    "shapely>=2.0",
    "python-geohash>=0.8",  # provides `import geohash`

    # Mobility analysis
    "scikit-mobility>=1.3", # provides `import skmob`

    # Graph / network
    "networkx>=3.2",

    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Statistical fitting
    "powerlaw>=1.5",

    # JIT compilation for utils.py hot loops (filter_(), xy())
    "numba>=0.59",
]

[dependency-groups]
dev = [
    # Interactive notebooks
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "nbdime>=4.0",
    "nbformat>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# scikit-mobility 1.3.x ships stale upper-bound metadata for pandas and
# geopandas that was accurate in 2021 but the library works fine with
# current versions.  These overrides tell uv to ignore those ceilings.
[tool.uv]
override-dependencies = [
    "geopandas>=0.14",
    "pandas>=1.5",
]
